--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -12,6 +12,7 @@ What are we trying to tell the reader?  (Ideally, we'd concentrate on just one o
 \item Here are the practical issues involved in computing realizability
   interpretations.
 \item Here's the history of the development of RZ
+\item Here's a worked example of a realizability interpretation for a non-trivial language involving dependent types.
 \item \ldots
 \end{itemize}
 
