--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -4,6 +4,12 @@
 Introduction and motivation, including initial examples.
 
 What are we trying to tell the reader?  (Ideally, we'd concentrate on just one or two themes)
+
+I guess we are trying to tell the reader that realizaiblity has not
+only proven to be a fundamental theoretical tool in logic and PL, but
+can also be used to implement an actual tool for writing
+specifications. Can you think of a better selling point?
+
 \begin{itemize}
 \item Here's why you'll want to use the RZ tool
 \item Here's a cool application of some theoretical results.
