--- a/doc/cie/theory.tex
+++ b/doc/cie/theory.tex
@@ -1,20 +1,37 @@
 \section{Typed realizability}
 \label{sec:typed-realizability}
 
-It all begain with~\cite{KleeneSC:intint}.
+Outline:
+%
+\begin{enumerate}
+\item explain how PER models are a natural semantic model for a
+  programmer, because they capture ideas like
+\item choice of representation and representation invariants,
+\item definition of a PER model, which makes things more precise, in
+  particular
+\item what computational model we use (ML-like language, terminating
+  values are used to represent things), and
+\item what the category of PER's is (but sweep categories under the
+  rug)
+\item discuss relationship with ``ordinary'' realizability a la
+  Kleene~\cite{KleeneSC:intint}, since logicians and theoreticians
+  usually know that kind
+\end{enumerate}
 
-Explain the PER model:
-\begin{itemize}
-\item (terminating) ML values give us a TPCA
-\item PER model on top of the TPCA
-\end{itemize}
-
+There ought to be some examples here.
 
 \section{Singatures and specifications}
 \label{sec:sing-spec}
 
-Explain signatures and assertions (i.e., the output language). I think
-it's more logical to do it ``backwards'' like this.
+Outline:
+%
+\begin{enumerate}
+\item We introduce assertions by saying that signatures only describe a
+  part of a specification
+\item Our assertions talk about per's
+\item They are written in the negative fragment,
+\end{enumerate}
+
 
 \section{The Input Language}
 \label{sec:input-language}
