--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -51,12 +51,13 @@
   year=1991
 }
 
-@article{Longley00,
+@article{Longley99,
   author    = {John Longley},
   title     = {Matching typed and untyped realizability.},
   journal   = {Electr. Notes Theor. Comput. Sci.},
-  volume    = 35,
-  year      = 2000
+  volume    = {23},
+  number    = {1},
+  year      = {1999}
 }
 
 @article{HylandJ:trit,
@@ -128,4 +129,86 @@ KEY="Peyton Jones"}
   month =	 {June},
   pages =        {221},
   publisher =    {IEEE Computer Society}
+}
+
+@Book{Wei00,
+  author = {Weihrauch, Klaus},
+  title = {Computable Analysis},
+  year = {2000},
+  publisher = {Springer},
+  address = {Berlin}
+}
+
+@Article{Bla97,
+  author = {Blanck, Jens},
+  title = {Domain representability of metric spaces},
+  journal = {Annals of Pure and Applied Logic},
+  year = {1997},
+  volume = {83},
+  pages = {225--247}
+}
+
+@InProceedings{TZ98,
+  author = {Tucker, J.V. and Zucker, J.I.},
+  title = {Computable Functions and Semicomputable Sets on Many-Sorted
+  Algebras},
+  booktitle = {Handbook of Logic in Computer Science, Volume 5},
+  editor = {Abramsky, S. and Gabbay, D.M. and Maibaum, T.S.E.},
+  publisher = {Clarendon Press},
+  address = {Oxford}
+}
+
+@InProceedings{EL00,
+  author = {Edalat, Abbas and Lieutier, Andr\'{e}},
+  title = {Domain of Differentiable Functions},
+  booktitle = {Computability and Complexity in Analysis},
+  editor = {Blanck, Jens and Brattka, Vasco and Hertling, Peter and Weihrauch,
+  Klaus},
+  year = {2000},
+  month = {September},
+  series = {Informatik Berichte},
+  volume = {272},
+  pages = {79},
+  publisher = {FernUniversit\"at Hagen},
+  note = {CCA2000 Workshop, Swansea, Wales, September 17--19, 2000}
+}
+
+@InProceedings{Mue00,
+  author = {M{\"u}ller, Norbert Th.},
+  title = {The {iRRAM}: Exact Arithmetic in {C}++},
+  booktitle = {Computability and Complexity in Analysis},
+  editor = {Blanck, Jens and Brattka, Vasco and Hertling, Peter and Weihrauch,
+  Klaus},
+  year = {2000},
+  month = {September},
+  series = {Informatik Berichte},
+  volume = {272},
+  pages = {319--350},
+  publisher = {FernUniversit\"at Hagen},
+  note = {CCA2000 Workshop, Swansea, Wales, September 17--19, 2000}
+}
+
+@InProceedings{Lam05a,
+  author = {Lambov, Branimir},
+  title = {{RealLib}: an efficient implementation of Exact Real Arithmetic},
+  booktitle = {Computability and Complexity in Analysis},
+  editor = {Grubba, Tanja and Hertling, Peter and Tsuiki, Hideki and Weihrauch,
+  Klaus},
+  year = {2005},
+  month = {July},
+  series = {Informatik Berichte},
+  volume = {326},
+  pages = {169--175},
+  publisher = {FernUniversit\"at in Hagen},
+  note = {Proccedings, Second International Conference, CCA 2005, Kyoto, Japan,
+  August 25--29, 2005}
+}
+
+@inproceedings{longley99when,
+    author = "John Longley",
+    title = "When is a Functional Program Not a Functional Program?",
+    booktitle = "International Conference on Functional Programming",
+    pages = "1-7",
+    year = "1999",
+    url = "citeseer.ist.psu.edu/longley99when.html"
 }
