--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -131,6 +131,15 @@ KEY="Peyton Jones"}
   publisher =    {IEEE Computer Society}
 }
 
+@techreport{komagata+:tr95,
+  author = "Yuki Komagata and David A. Schmidt",
+  title = "Implementation of Intuitionistic Type Theory and
+                  Realizability Theory",
+  department = "Department of Computing and Information Sciences",
+  institution = "Kansas State University",
+  number = "TR-CS-95-4",
+  year = "1995"}
+
 @Book{Wei00,
   author = {Weihrauch, Klaus},
   title = {Computable Analysis},
