updated author info for llncs

--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -63,15 +63,17 @@
 \begin{document}
 \title{RZ (Working title)}
 \author{
-  Andrej Bauer\\
+  Andrej Bauer\inst{1} \and
+  Christopher A. Stone\inst{2}}
+
+\institute{
   Faculty of Mathematics and Physics\\
   University of Ljubljana, Slovenia\\
-  \texttt{Andrej.Bauer@fmf.uni-lj.si}
+  \email{Andrej.Bauer@fmf.uni-lj.si}
   \and
-  Chrisopher A. Stone\\
   Computer Science Department\\
   Harvey Mudd College, USA\\
-  \texttt{stone@cs.hmc.edu}
+  \email{stone@cs.hmc.edu}
 }
 \maketitle
 
