--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -67,11 +67,10 @@
   Christopher A. Stone\inst{2}}
 
 \institute{
-  Faculty of Mathematics and Physics\\
-  University of Ljubljana, Slovenia\\
+  Faculty of Mathematics and Physics, University of Ljubljana, Slovenia\\
   \email{Andrej.Bauer@fmf.uni-lj.si}
   \and
-  Computer Science Department\\
+  Computer Science Department, 
   Harvey Mudd College, USA\\
   \email{stone@cs.hmc.edu}
 }
