--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -26,8 +26,9 @@
 \newcommand{\Type}{\mathsf{Type}}
 \newcommand{\terminating}[1]{[\![#1]\!]}
 \newcommand{\typeOf}[1]{|#1|}
+\newcommand{\setOf}[1]{\langle #1 \rangle}
 \newcommand{\support}[1]{\|#1\|}
-\newcommand{\modestSet}[1]{(#1, \typeOf{#1}, {\rz_{#1}})}
+
 
 % Sets
 \newcommand{\set}[1]{\{#1\}}
